--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.11",
         "laravel/sanctum": "^2.14.1",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "josegus/laravel-flash": "dev-master"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -20,6 +21,12 @@
         "phpunit/phpunit": "^9.5.10",
         "spatie/laravel-ignition": "^1.0"
     },
+    "repositories": [
+        {
+            "type": "path",
+            "url": "../laravel-flash"
+        }
+    ],
     "autoload": {
         "psr-4": {
             "App\\": "app/",
